<resources>
    <string name="app_name">MyReport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyReport</string>
    <string name="nav_header_subtitle">www.ciagrolasbrisas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="id">Id</string>
    <string name="rol">Rol</string>
    <string name="ibd">IBD</string>
    <string name="brix">Brix</string>
    <string name="tipo">Tipo</string>
    <string name="mas">Plus</string>
    <string name="salir">Salir</string>
    <string name="ciclo">Ciclo</string>
    <string name="login">Login</string>
    <string name="hasta">Hasta</string>
    <string name="fecha">Fecha</string>
    <string name="menu">Menú</string>
    <string name="mdLote">Lote</string>
    <string name="nuevo">Nuevo</string>
    <string name="desde">Desde</string>
    <string name="calibre">Calibre</string>
    <string name="cedula">Cédula</string>
    <string name="detalle">Detalle</string>
    <string name="cliente">Cliente</string>
    <string name="puesto">Puesto</string>
    <string name="motivo">Motivo</string>
    <string name="buscar"> Buscar</string>
    <string name="usuario">Usuario</string>
    <string name="guardar">Guardar</string>
    <string name="tamano">Tamaño</string>
    <string name="jornada">Jornada</string>
    <string name="reporte">Reporte</string>
    <string name="seccion">Sección</string>
    <string name="nombre">Nombre</string>
    <string name="eliminar">Eliminar</string>
    <string name="siguiente">Siguiente</string>
    <string name="compartir">Compartir</string>
    <string name="premas">Premaduración</string>
    <string name="menu_gallery">Gallery</string>
    <string name="planta">Planta Empaque</string>
    <string name="contrasena">Contraseña</string>
    <string name="hora_final">Hora Final</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="traslucidez">Traslucidez</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="peso_caja">Peso de Caja</string>
    <string name="grupo_forza">Grupo Forza</string>
    <string name="tipo_reporte">Tipo Reporte</string>
    <string name="masacciones">Más Acciones</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="configuracion">Configuración</string>
    <string name="sincroLocal">Sincronizar Local</string>
    <string name="cuello_botella">Cuello Botella</string>
    <string name="guardarCalibre">Agregar Calibre</string>
    <string name="tipo_muestreo">Tipo Muestreo</string>
    <string name="horas_efectivas">Horas Efectivas</string>
    <string name="rango_fechas">Filtrar fecha única</string>
    <string name="mensaje">IT Department-Keelings</string>
    <string name="ticket_cosecha">Reporte Carretas</string>
    <string name="sincroRemoto">Sincronizar Remoto</string>
    <string name="datos_guardados">Datos almacenados</string>
    <string name="semanas_a_cosecha">Semanas a Cosecha</string>
    <string name="modoAlmacenamiento">Modo Almacenamiento</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vw_rpt_cuello_botella">VwRptCuelloBotella</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_vw_ticket_cosecha">vwTicketCosecha</string>
</resources>