<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.VwBuscarReporte">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/design_default_color_on_secondary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_reporte"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/spTipoReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/semanas_a_cosecha"
        android:textAlignment="center"
        android:minHeight="48dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/design_default_color_on_secondary" />

    <CheckBox
        android:id="@+id/checkBoxRangoFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rango_fechas" />

    <Button
        android:id="@+id/btnFecha1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/desde" />

    <TextView
        android:id="@+id/tvDesde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnFecha2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/hasta" />

    <TextView
        android:id="@+id/tvHasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnBuscarXfecha"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buscar" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/design_default_color_on_secondary" />

    <TextView
        android:id="@+id/tvDetalleCb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/datos_guardados"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/lvDatosReporte"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/reporte"
        app:srcCompat="@android:drawable/stat_sys_download" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>