<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.VwPremas2">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/design_default_color_on_secondary" />
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ciclo"
            android:textAlignment="center"
            android:minHeight="48dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tamano"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spTamano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ciclo"
            android:textAlignment="center"
            android:minHeight="48dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibd"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spIbd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ciclo"
            android:textAlignment="center"
            android:minHeight="48dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/traslucidez"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spTraslucidez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ciclo"
            android:textAlignment="center"
            android:minHeight="48dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/design_default_color_on_secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtBrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/brix"
                android:inputType="numberDecimal"
                android:maxLength="7"
                android:maxLines="1"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardarCalibre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/guardarCalibre" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/guardar" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>